Remove unused constructor and variable. Remove redundant call to setup user details in methods.