@@ -1,7 +1,5 @@
 package com.apriori.bcm.api.utils;
 
-import static com.apriori.shared.util.enums.RolesEnum.APRIORI_DEVELOPER;
-
 import com.apriori.bcm.api.enums.BcmAppAPIEnum;
 import com.apriori.bcm.api.models.request.AddInputsRequest;
 import com.apriori.bcm.api.models.request.GroupItems;
@@ -16,14 +14,11 @@ import com.apriori.bcm.api.models.response.InputRowPostResponse;
 import com.apriori.bcm.api.models.response.WorkSheetInputRowGetResponse;
 import com.apriori.bcm.api.models.response.WorkSheetResponse;
 import com.apriori.bcm.api.models.response.WorkSheets;
-import com.apriori.shared.util.file.user.UserCredentials;
-import com.apriori.shared.util.file.user.UserUtil;
 import com.apriori.shared.util.http.models.entity.RequestEntity;
 import com.apriori.shared.util.http.models.request.HTTPRequest;
 import com.apriori.shared.util.http.utils.FileResourceUtil;
 import com.apriori.shared.util.http.utils.QueryParams;
 import com.apriori.shared.util.http.utils.RequestEntityUtil;
-import com.apriori.shared.util.http.utils.RequestEntityUtilBuilder;
 import com.apriori.shared.util.http.utils.ResponseWrapper;
 import com.apriori.shared.util.http.utils.TestUtil;
 import com.apriori.shared.util.json.JsonManager;
@@ -40,17 +35,11 @@ import java.util.stream.Collectors;
 @Slf4j
 public class BcmUtil extends TestUtil {
 
-    protected static UserCredentials testingUser = UserUtil.getUser(APRIORI_DEVELOPER);
     private RequestEntityUtil requestEntityUtil;
 
     public BcmUtil(RequestEntityUtil requestEntityUtil) {
         super.requestEntityUtil = requestEntityUtil;
         this.requestEntityUtil = requestEntityUtil;
-    }
-
-    // FIXME: 01/07/2024 cn - remove this constructor when refactoring
-    public BcmUtil() {
-
     }
 
     /**
@@ -88,7 +77,7 @@ public class BcmUtil extends TestUtil {
      * @return response object
      */
 
-    public ResponseWrapper<InputRowPostResponse> createWorkSheetInputRowWithEmail(String componentIdentity, String scenarioIdentity, String worksheetIdentity, UserCredentials userCred) {
+    public ResponseWrapper<InputRowPostResponse> createWorkSheetInputRowWithEmail(String componentIdentity, String scenarioIdentity, String worksheetIdentity) {
         WorksheetInputRowsRequest body = WorksheetInputRowsRequest
             .builder()
             .inputRow(Inputrow
@@ -98,15 +87,12 @@ public class BcmUtil extends TestUtil {
                 .build())
             .build();
 
-        requestEntityUtil = RequestEntityUtilBuilder
-            .useCustomUser(userCred)
-            .useApUserContextInRequests();
-
         final RequestEntity requestEntity =
             requestEntityUtil.init(BcmAppAPIEnum.WORKSHEET_INPUT_NAME, InputRowPostResponse.class)
                 .body(body)
                 .inlineVariables(worksheetIdentity)
                 .expectedResponseCode(HttpStatus.SC_CREATED);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -128,11 +114,13 @@ public class BcmUtil extends TestUtil {
                 .scenarioIdentity(scenarioIdentity)
                 .build())
             .build();
+
         final RequestEntity requestEntity =
             requestEntityUtil.init(BcmAppAPIEnum.WORKSHEET_INPUT_NAME, InputRowPostResponse.class)
                 .body(body)
                 .inlineVariables(worksheetIdentity)
                 .expectedResponseCode(HttpStatus.SC_CREATED);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -148,6 +136,7 @@ public class BcmUtil extends TestUtil {
             requestEntityUtil.init(BcmAppAPIEnum.WORKSHEET_INPUT_NAME, WorkSheetInputRowGetResponse.class)
                 .inlineVariables(worksheetIdentity)
                 .expectedResponseCode(HttpStatus.SC_OK);
+
         return HTTPRequest.build(requestEntity).get();
     }
 
@@ -171,6 +160,7 @@ public class BcmUtil extends TestUtil {
             requestEntityUtil.init(BcmAppAPIEnum.WORKSHEETS, ErrorResponse.class)
                 .body(body)
                 .expectedResponseCode(HttpStatus.SC_CONFLICT);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -211,6 +201,7 @@ public class BcmUtil extends TestUtil {
                 .inlineVariables(worksheetIdentity)
                 .expectedResponseCode(expectedResponseCode)
                 .body(body);
+
         return HTTPRequest.build(requestEntity).patch();
     }
 
@@ -252,6 +243,7 @@ public class BcmUtil extends TestUtil {
             requestEntityUtil.init(BcmAppAPIEnum.WORKSHEET_BY_ID, klass)
                 .inlineVariables(worksheetIdentity)
                 .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).get();
     }
 
@@ -261,12 +253,13 @@ public class BcmUtil extends TestUtil {
             requestEntityUtil.init(BcmAppAPIEnum.DELETE_INPUTS, klass)
                 .inlineVariables(worksheetIdentity)
                 .body(MultipleDelete.builder()
-                    .groupItems(Arrays.asList(GroupItems
+                    .groupItems(Collections.singletonList(GroupItems
                         .builder()
                         .inputRowIdentity(inputRowIdentity)
                         .build()))
                     .build())
                 .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -282,6 +275,7 @@ public class BcmUtil extends TestUtil {
         RequestEntity requestEntity = requestEntityUtil.init(BcmAppAPIEnum.WORKSHEET_BY_ID, klass)
             .inlineVariables(worksheetIdentity)
             .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).delete();
     }
 
@@ -293,14 +287,11 @@ public class BcmUtil extends TestUtil {
      * @param expectedResponseCode - expected response code
      * @return response object
      */
-    public <T> ResponseWrapper<T> deleteWorksheetWithEmail(Class<T> klass, String worksheetIdentity, Integer expectedResponseCode, UserCredentials userCred) {
-        requestEntityUtil = RequestEntityUtilBuilder
-            .useCustomUser(userCred)
-            .useApUserContextInRequests();
-
+    public <T> ResponseWrapper<T> deleteWorksheetWithEmail(Class<T> klass, String worksheetIdentity, Integer expectedResponseCode) {
         RequestEntity requestEntity = requestEntityUtil.init(BcmAppAPIEnum.WORKSHEET_BY_ID, klass)
             .inlineVariables(worksheetIdentity)
             .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).delete();
     }
 
@@ -322,6 +313,7 @@ public class BcmUtil extends TestUtil {
                     .build()))
                 .build())
             .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -337,6 +329,7 @@ public class BcmUtil extends TestUtil {
         RequestEntity requestEntity = requestEntityUtil.init(BcmAppAPIEnum.COST_WORKSHEET, klass)
             .inlineVariables(worksheetIdentity)
             .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -350,7 +343,7 @@ public class BcmUtil extends TestUtil {
      * @return response object
      */
     public <T> ResponseWrapper<T> addMultipleInputRows(Class<T> klass, String worksheetIdentity, List<String> componentIdentityScenarioIdentity, Integer expectedResponseCode) {
-        List<String[]> componentIdScenarioId = componentIdentityScenarioIdentity.stream().map(o -> o.split(",")).collect(Collectors.toList());
+        List<String[]> componentIdScenarioId = componentIdentityScenarioIdentity.stream().map(o -> o.split(",")).toList();
 
         RequestEntity requestEntity = requestEntityUtil.init(BcmAppAPIEnum.MULTIPLE_ROWS, klass)
             .inlineVariables(worksheetIdentity)
@@ -362,6 +355,7 @@ public class BcmUtil extends TestUtil {
                     .collect(Collectors.toList()))
                 .build())
             .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -382,6 +376,7 @@ public class BcmUtil extends TestUtil {
                     .collect(Collectors.toList()))
                 .build())
             .expectedResponseCode(expectedResponseCode);
+
         return HTTPRequest.build(requestEntity).post();
     }
 
@@ -395,6 +390,7 @@ public class BcmUtil extends TestUtil {
         RequestEntity requestEntity = requestEntityUtil.init(BcmAppAPIEnum.CANDIDATES, ComponentResponse.class)
             .inlineVariables(worksheetIdentity)
             .expectedResponseCode(HttpStatus.SC_OK);
+
         return HTTPRequest.build(requestEntity).get();
     }
 
@@ -411,6 +407,7 @@ public class BcmUtil extends TestUtil {
             .inlineVariables(worksheetIdentity)
             .expectedResponseCode(HttpStatus.SC_OK)
             .queryParams(new QueryParams().use(param, value));
+
         return HTTPRequest.build(requestEntity).get();
     }
 }
